@@ -48,6 +48,10 @@ Fixed bugs:
 * AbstractCvsTask prematurely closed its outputStream and errorStream.
   Bugzilla 30097.
 
+* Impossible to use implicit classpath for <taskdef>
+  when Ant core loader != Java application loader and Path.systemClassPath taken from ${java.class.path}
+  Bugzilla 30161.  
+
 Changes from Ant 1.6.1 to Ant 1.6.2
 ===================================
 
